k8s/workload/litomi/base/chat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litomi-chat
spec:
  selector:
    app.kubernetes.io/name: litomi-chat
  ports:
    - name: http
      port: 3003
      protocol: TCP
      targetPort: http
